# rsomics-bed12tobed6

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  lib.rs  main.rs
tests/: compat.rs
tests/golden/: expected.bed  input.bed12
