[package]
name = "rsomics-bed12tobed6"
version = "0.1.0"
description = "Split BED12 features into discrete BED6 intervals — bedtools bed12tobed6 equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bed12tobed6"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["bed12", "bed6", "bedtools", "bioinformatics", "genomics"]
readme = "README.md"

[[bin]]
name = "rsomics-bed12tobed6"
path = "src/main.rs"

[lib]
name = "rsomics_bed12tobed6"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
itoa = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
uninlined_format_args = "allow"
